--- a/MuchosLocalization/localization/english/custom_localization/seduction_custom_loc_l_english.yml
+++ b/MuchosLocalization/localization/english/custom_localization/seduction_custom_loc_l_english.yml
@@ -37,6 +37,6 @@
  book_in_question_religious:0 "[SCOPE.Custom('RandomReligiousTextName')]"
  book_in_question_entertaining:0 "[SCOPE.Custom('RandomEntertainmentTextName')]"
  book_in_question_informative:0 "[SCOPE.Custom('RandomInformativeTextName')]"
- good_book_selection_religious:0 "[SCOPE.Custom('RandomReligiousTextName')]"
- good_book_selection_entertaining:0 "[SCOPE.Custom('RandomEntertainmentTextName')]"
- good_book_selection_informative:0 "[SCOPE.Custom('RandomInformativeTextName')]"
+ good_book_s_religious:0 "[SCOPE.Custom('RandomReligiousTextName')]"
+ good_book_s_entertaining:0 "[SCOPE.Custom('RandomEntertainmentTextName')]"
+ good_book_s_informative:0 "[SCOPE.Custom('RandomInformativeTextName')]"
