--- a/MuchosLocalization/localization/english/event_localization/schemes/seduce/seduce_ongoing_events_l_english.yml
+++ b/MuchosLocalization/localization/english/event_localization/schemes/seduce/seduce_ongoing_events_l_english.yml
@@ -60,40 +60,40 @@
 
  seduce_ongoing.1101.t:0 "Something Expensive"
  seduce_ongoing.1101.desc:0 "A gift is certain to catch [target.GetTitledFirstNamePossessive] attention, and surely anyone would appreciate a fine, clearly expensive one."
- seduce_ongoing.gift_selection.tapestry:0 "A tapestry, featuring [target.GetHerHis] dynasty."
- seduce_ongoing.gift_selection.tapestry_tt:0 "I think [target.GetTitledFirstName] is a [target.GetWomanMan] whose loyalty is to [target.GetHerHis] family and dynasty"
- seduce_ongoing.gift_selection.horse:0 "A purebred horse must be appreciated."
- seduce_ongoing.gift_selection.horse_tt:0 "I think [target.GetTitledFirstName] is someone who appreciates activity and the open sky"
- seduce_ongoing.gift_selection.tailor:0 "A tailor to dress [target.GetHerHim] to perfection!"
- seduce_ongoing.gift_selection.tailor_tt:0 "I think [target.GetTitledFirstName] appreciates style and making an impression"
- seduce_ongoing.gift_selection.decline:0 "Perhaps not."
+ seduce_ongoing.gift_s.tapestry:0 "A tapestry, featuring [target.GetHerHis] dynasty."
+ seduce_ongoing.gift_s.tapestry_tt:0 "I think [target.GetTitledFirstName] is a [target.GetWomanMan] whose loyalty is to [target.GetHerHis] family and dynasty"
+ seduce_ongoing.gift_s.horse:0 "A purebred horse must be appreciated."
+ seduce_ongoing.gift_s.horse_tt:0 "I think [target.GetTitledFirstName] is someone who appreciates activity and the open sky"
+ seduce_ongoing.gift_s.tailor:0 "A tailor to dress [target.GetHerHim] to perfection!"
+ seduce_ongoing.gift_s.tailor_tt:0 "I think [target.GetTitledFirstName] appreciates style and making an impression"
+ seduce_ongoing.gift_s.decline:0 "Perhaps not."
 
  seduce_ongoing.1102.t:0 "A Gift of Labor"
  seduce_ongoing.1102.desc:0 "Everyone appreciates a gift, but perhaps I could come up with something truly unique that will make a real impression on [target.GetTitledFirstName]!"
- seduce_ongoing.gift_selection.embroidery:0 "An embroidery featuring [target.GetHerHis] house crest."
- seduce_ongoing.gift_selection.embroidery_tt:0 "I think [target.GetTitledFirstName] cares about [target.GetHerHis] family's stature"
- seduce_ongoing.gift_selection.poem:0 "Commissioned poetry on the joys of life, dedicated to [target.GetHerHim]."
- seduce_ongoing.gift_selection.poem_tt:0 "I think [target.GetTitledFirstName] appreciates the physical pleasures of life, or at the very least poetry"
- seduce_ongoing.gift_selection.woodcarving:0 "A woodcarving of a castle!"
- seduce_ongoing.gift_selection.woodcarving_tt:0 "I think [target.GetTitledFirstName] appreciates architecture"
+ seduce_ongoing.gift_s.embroidery:0 "An embroidery featuring [target.GetHerHis] house crest."
+ seduce_ongoing.gift_s.embroidery_tt:0 "I think [target.GetTitledFirstName] cares about [target.GetHerHis] family's stature"
+ seduce_ongoing.gift_s.poem:0 "Commissioned poetry on the joys of life, dedicated to [target.GetHerHim]."
+ seduce_ongoing.gift_s.poem_tt:0 "I think [target.GetTitledFirstName] appreciates the physical pleasures of life, or at the very least poetry"
+ seduce_ongoing.gift_s.woodcarving:0 "A woodcarving of a castle!"
+ seduce_ongoing.gift_s.woodcarving_tt:0 "I think [target.GetTitledFirstName] appreciates architecture"
  
  seduce_ongoing.1103.t:0 "Small but Meaningful"
  seduce_ongoing.1103.desc:0 "Not every gift has to be a grand statement of wealth. Smaller things can make a far greater impression, as long as they are chosen well. I wonder what [target.GetTitledFirstName] would appreciate."
- seduce_ongoing.gift_selection.jewelry:0 "A silver locket, always close to [target.GetHerHis] heart."
- seduce_ongoing.gift_selection.jewelry_tt:0 "I think [target.GetTitledFirstName] likes to catch people's attention — or just things that glimmer"
- seduce_ongoing.gift_selection.stuffed_animal:0 "A stuffed fox would certainly be unusual..."
- seduce_ongoing.gift_selection.stuffed_animal_tt:0 "I think [target.GetTitledFirstName] appreciates symbols of authority — over life itself"
- seduce_ongoing.gift_selection.flower_display:0 "A flower display, for the garden at [court_location.GetNameNoTierNoTooltip]."
- seduce_ongoing.gift_selection.flower_display_tt:0 "I think [target.GetTitledFirstName] likes tending to things, or at least appreciates beauty"
+ seduce_ongoing.gift_s.jewelry:0 "A silver locket, always close to [target.GetHerHis] heart."
+ seduce_ongoing.gift_s.jewelry_tt:0 "I think [target.GetTitledFirstName] likes to catch people's attention — or just things that glimmer"
+ seduce_ongoing.gift_s.stuffed_animal:0 "A stuffed fox would certainly be unusual..."
+ seduce_ongoing.gift_s.stuffed_animal_tt:0 "I think [target.GetTitledFirstName] appreciates symbols of authority — over life itself"
+ seduce_ongoing.gift_s.flower_display:0 "A flower display, for the garden at [court_location.GetNameNoTierNoTooltip]."
+ seduce_ongoing.gift_s.flower_display_tt:0 "I think [target.GetTitledFirstName] likes tending to things, or at least appreciates beauty"
 
  seduce_ongoing.1104.t:0 "Something Unusual"
  seduce_ongoing.1104.desc:0 "Anyone can buy a token of affection, big or small. If I want to impress [target.GetTitledFirstName], I should send [target.GetHerHim] something truly special"
- seduce_ongoing.gift_selection.rare_book:0 "I should acquire an especially rare book for [target.GetHerHim]."
- seduce_ongoing.gift_selection.rare_book_tt:0 "I think [target.GetTitledFirstName] likes knowledge, or at least the objects that contains it"
- seduce_ongoing.gift_selection.handkerchief:0 "A handkerchief with my crest on it."
- seduce_ongoing.gift_selection.handkerchief_tt:0 "I think [target.GetTitledFirstName] would make good use of a symbol from someone of my stature"
- seduce_ongoing.gift_selection.object:0 "[SCOPE.Custom('SeductionObjectIndefinite')|U], a reminder of our first meeting"
- seduce_ongoing.gift_selection.object_tt:0 "I think [target.GetTitledFirstName] already cares for me, in some way"
+ seduce_ongoing.gift_s.rare_book:0 "I should acquire an especially rare book for [target.GetHerHim]."
+ seduce_ongoing.gift_s.rare_book_tt:0 "I think [target.GetTitledFirstName] likes knowledge, or at least the objects that contains it"
+ seduce_ongoing.gift_s.handkerchief:0 "A handkerchief with my crest on it."
+ seduce_ongoing.gift_s.handkerchief_tt:0 "I think [target.GetTitledFirstName] would make good use of a symbol from someone of my stature"
+ seduce_ongoing.gift_s.object:0 "[SCOPE.Custom('SeductionObjectIndefinite')|U], a reminder of our first meeting"
+ seduce_ongoing.gift_s.object_tt:0 "I think [target.GetTitledFirstName] already cares for me, in some way"
 
  seduce_ongoing.1201.t:0 "A Well-Chosen Gift"
  seduce_ongoing.1201.desc:0 "I have received a gift, a beautiful tapestry featuring scenes from my dynasty's history, and framed by skillfully woven crests!"
