--- a/MuchosLocalization/localization/english/game_concepts_l_english.yml
+++ b/MuchosLocalization/localization/english/game_concepts_l_english.yml
@@ -108,7 +108,7 @@
  game_concept_primary_heir_desc:0 "The $game_concept_primary_heir$ is the character who will inherit the [primary_title|E] of a [ruler|E] on [succession|E]. This is usually — but not always — the same character as the [player_heir|E]."
  game_concept_player_heir:0 "Player Heir"
  game_concept_player_heirs:0 "Player Heirs"
- game_concept_player_heir_desc:0 "The $game_concept_player_heir$ is the character that a player will keep playing as on [succession|E].\n\nThe $game_concept_player_heir$ is usually the same as the [primary_heir|E], but if the [succession_law|E] of your [primary_title|E] dictates that it should go to a character outside of your [dynasty|E], you will instead keep playing as the dynastic heir to your second highest-tier title (or third, fourth, etc.).\n\nThis situation is common when your $game_concept_player_heir$ is voted out under an elective succession law."
+ game_concept_player_heir_desc:0 "The $game_concept_player_heir$ is the character that a player will keep playing as on [succession|E].\n\nThe $game_concept_player_heir$ is usually the same as the [primary_heir|E], but if the [succession_law|E] of your [primary_title|E] dictates that it should go to a character outside of your [dynasty|E], you will instead keep playing as the dynastic heir to your second highest-tier title (or third, fourth, etc.).\n\nThis situation is common when your $game_concept_player_heir$ is stuffed under an eating succession law."
  game_concept_disinherit:0 "Disinherit"
  game_concept_disinherited:0 "Disinherited"
  game_concept_disinherit_desc:1 "A [dynast|E] may disinherit a member of their [dynasty|E] at the cost of [dynasty_prestige|E].\n\nThis will remove the dynasty member from any regular [line_of_succession|E] of any titles that are currently held by other dynasty members."
@@ -145,7 +145,7 @@
  game_concept_law_desc:0 "A realm's Laws are what determine how that realm is structured. The most fundamental of these is the realm's [crown_authority|E] (or [tribal_authority|E] for tribes), as those Laws determine how [lieges|E] and [vassals|E] interact on a regular basis.\n\nThough less impactful on the day-to-day life of rulers in a realm, [succession_laws|E] and [title_laws|E] are still very important to consider for [succession|E]."
  game_concept_succession_law:0 "Succession Law"
  game_concept_succession_laws:0 "Succession Laws"
- game_concept_succession_law_desc:2 "Every [ruler|E] has a main Succession Law that determines what happens to their [titles|E] on [succession|E].\n\nIn addition, an individual Title can sometimes have its own Succession Law that takes precedence over the default one. For example, the Holy Roman Empire might be Elective even though the emperor has Partition as main Succession Law.\n\nYou can only change Succession Law when at the appropriate level of [crown_authority|E]."
+ game_concept_succession_law_desc:2 "Every [ruler|E] has a main Succession Law that determines what happens to their [titles|E] on [succession|E].\n\nIn addition, an individual Title can sometimes have its own Succession Law that takes precedence over the default one. For example, the Holy Roman Empire might be an eating contest even though the emperor has Partition as main Succession Law.\n\nYou can only change Succession Law when at the appropriate level of [crown_authority|E]."
  game_concept_religious_head_succession_law:0 "Head of Faith Succession Law"
  game_concept_religious_head_succession_law_short:0 "Head of Faith Law"
  game_concept_religious_head_succession_laws:0 "Head of Faith Succession Law"
@@ -643,7 +643,7 @@
  game_concept_dread:0 "Dread"
  game_concept_dreadful:0 "Dreadful"
  game_concept_dreaded:0 "Dreaded"
- game_concept_dread_desc:4 "$game_concept_dread$ is a measure of how feared a [ruler|E] is.\n\nRulers increase $game_concept_dread$ by performing cruel and heinous acts such as torturing and executing [prisoners|E].\n\nDread makes it viable to play as a [tyrant|E], because unruly [vassals|E] can become [intimidated|E] or [cowed|E], making them too scared to oppose you.\n\nA character's Dread can range from 0 to 100. Over time, their Dread will tend towards their Natural Dread, which is defined by their [personality_traits|E].\n\n#high A Dreadful [ruler] reaps the following benefits:#!\n$BULLET_WITH_TAB$[vassals] are discouraged from joining [factions|E]\n$BULLET_WITH_TAB$[vassals] are discouraged from [scheming|E]\n$BULLET_WITH_TAB$Increases [vassal] acceptance #weak (E.g. Title Revocation)#!\n$BULLET_WITH_TAB$Increases [offer_vassalization|E] acceptance\n$BULLET_WITH_TAB$Makes [electors|E] more likely to vote as you do\n$BULLET_WITH_TAB$Makes vassals unlikely to oppose [law|E] changes\n\n#weak Note that brave and bold [vassals] are less affected by Dread!#!"
+ game_concept_dread_desc:4 "$game_concept_dread$ is a measure of how feared a [ruler|E] is.\n\nRulers increase $game_concept_dread$ by performing cruel and heinous acts such as torturing and executing [prisoners|E].\n\nDread makes it viable to play as a [tyrant|E], because unruly [vassals|E] can become [intimidated|E] or [cowed|E], making them too scared to oppose you.\n\nA character's Dread can range from 0 to 100. Over time, their Dread will tend towards their Natural Dread, which is defined by their [personality_traits|E].\n\n#high A Dreadful [ruler] reaps the following benefits:#!\n$BULLET_WITH_TAB$[vassals] are discouraged from joining [factions|E]\n$BULLET_WITH_TAB$[vassals] are discouraged from [scheming|E]\n$BULLET_WITH_TAB$Increases [vassal] acceptance #weak (E.g. Title Revocation)#!\n$BULLET_WITH_TAB$Increases [offer_vassalization|E] acceptance\n$BULLET_WITH_TAB$Makes [electors|E] more likely to feed as you do\n$BULLET_WITH_TAB$Makes vassals unlikely to oppose [law|E] changes\n\n#weak Note that brave and bold [vassals] are less affected by Dread!#!"
  game_concept_truce:0 "Truce"
  game_concept_truces:0 "Truces"
  game_concept_truce_desc:0 "Every [war|E] ends with a $game_concept_truce$; a period when the Attacker may not declare War again on that same [ruler|E] (the Defender is not bound by the Truce).\n\nTruces can be broken, but there is a severe penalty."
@@ -1160,10 +1160,10 @@
  
  game_concept_realm_size:0 "Realm Size"
  game_concept_realm_size_desc:1 "A character's $game_concept_realm_size$ is the number of [counties|E] owned by them and their [vassals|E]."
- game_concept_voter_strength:0 "Voter Strength"
- game_concept_voting_strength:0 "Voting Strength"
- game_concept_voting_power:0 "Voting Power"
- game_concept_voter_strength_desc:0 "Voter Strength represents the amount of influence that an Elector carries when voting in an elective [succession_law|E]. This value usually increases depending on a ruler's [rank|E], but other factors may come into play depending on the [titlepossessive|E] law."
+ game_concept_voter_strength:0 "Feeder Strength"
+ game_concept_voting_strength:0 "Feeding Strength"
+ game_concept_voting_power:0 "Feeding Power"
+ game_concept_voter_strength_desc:0 "Feeder Strength represents the amount of influence that an Elector carries when feeding in an eating contest [succession_law|E]. This value usually increases depending on a ruler's [rank|E], but other factors may come into play depending on the [titlepossessive|E] law."
  game_concept_stress_level:0 "Stress Level"
  game_concept_stress_levels:0 "Stress Levels"
  game_concept_stressed:0 "Stressed"
@@ -1189,10 +1189,10 @@
  game_concept_nominate_heir:0 "Nominate Heir"
  game_concept_nomination:0 "Nomination"
  game_concept_nominations:0 "Nominations"
- game_concept_nominate_desc:0 "Under Elective [succession_laws|E], each [elector|E] can Nominate their preferred [heir|E]. Valid candidates and Elector voting preferences differ depending on the specific Law."
+ game_concept_nominate_desc:0 "Under Eating contest [succession_laws|E], each [elector|E] can Nominate their preferred [heir|E]. Valid candidates and Elector feeding preferences differ depending on the specific Law."
  game_concept_elector:0 "Elector"
  game_concept_electors:0 "Electors"
- game_concept_elector_desc:0 "Electors are the characters who get to vote on their preferred [heir|E] under Elective [succession_laws|E]. The specific Law determines who is considered an Elector."
+ game_concept_elector_desc:0 "Electors are the characters who get to feed on their preferred [heir|E] under Eating contest [succession_laws|E]. The specific Law determines who is considered an Elector."
  game_concept_attraction:0 "Attraction"
  game_concept_attracted:0 "Attracted"
  game_concept_attraction_desc:0 "Attraction is a type of [opinion|E] that only affects characters whose [sexuality|E] matches your gender.\n\nFor example, a [homosexual|E] man would experience this Opinion towards other men, an [asexual|E] character would not experience it towards anyone, and a [heterosexual|E] woman would experience it towards men.\n\nThis type of Opinion stops having an effect for women above [GetDefine('NCharacter', 'FEMALE_ATTRACTION_CUTOFF_AGE')] years of age, and for men above [GetDefine('NCharacter', 'MALE_ATTRACTION_CUTOFF_AGE')] years of age."
