--- a/MuchosLocalization/localization/english/important_actions_l_english.yml
+++ b/MuchosLocalization/localization/english/important_actions_l_english.yml
@@ -201,8 +201,8 @@
  action_disabled_building_combined_group_name:0 "Disabled buildings"
  action_disabled_building_combined_group_description:1 "Some of your [buildings|E] are disabled."
  action_nominate_successor:0 "Nominate Successor"
- action_nominate_successor_desc:3 "You have not cast your vote for the [heir|E] to the [landed_title.GetName].\n\n#help Some [titles|E] use the Elective form of [succession|E], where the Heir is elected instead of passed down to a direct relative. You should vote for someone, ideally one of your [heirs|E], or a member of your [dynasty|E]."
- action_nominate_successor_click:0 "#I Click to open the Election view#!"
+ action_nominate_successor_desc:3 "You have served food for the [heir|E] to the [landed_title.GetName].\n\n#help Some [titles|E] use the eating contest form of [succession|E], where the Heir is elected instead of passed down to a direct relative. You should feed someone, ideally one of your [heirs|E], or a member of your [dynasty|E]."
+ action_nominate_successor_click:0 "#I Click to open the  view#!"
  action_can_call_house_member:1 "You can call a House Member"
  action_can_call_house_member_combined_group_label:2 "You can call house members"
  action_can_call_house_member_combined_group_name:1 "You can call house members"
@@ -390,11 +390,11 @@
  action_can_ask_hof_for_money_desc:0 "Your [head_of_faith|E], [recipient.GetUIName], would accept a plea for [gold|E]. You should consider leveraging your [piety|E] to expand your treasury!"
  action_can_ask_hof_for_money_click:0 "#I Click to $hof_ask_for_gold_interaction$#!"
  
- action_title_election:0 "Active Election in [landed_title.GetNameNoTooltip]"
- action_title_election_combined_group_label:0 "Active Elections"
- action_title_election_combined_group_name:0 "Active Elections can be Previewed"
- action_title_election_desc:0 "There is an ongoing election in [landed_title.GetNameNoTooltip], a [title|E] ruled by [landed_title.GetHolder.GetShortUIName]. Currently, the leading candidate is [landed_title.GetHeir.GetUIName].\n\n#help If you are an [elector|E] it is worthwhile to keep tabs on active elections, even if you have already cast your votes. Remember, you can change your vote at any time!\n\nEven if you are not an [elector|E] it's good to keep tabs on elections. After all, anything can happen... it might be #emp you#! who are the top candidate!#!"
- action_title_election_combined_group_description:0 "There are ongoing elections in your realm.\n\n#help If you are an [elector|E] it is worthwhile to keep tabs on active elections, even if you have already cast your votes. Remember, you can change your vote at any time!\n\nEven if you are not an [elector|E] it's good to keep tabs on elections. After all, anything can happen... it might be #emp you#! who are the top candidate!#!"
- action_title_election_label:0 "Active Election in [landed_title.GetNameNoTooltip]"
- action_title_election_combined_label:0 "[landed_title.GetNameNoTooltip|U]"
- action_title_election_click:0 "#I Click to view Election#!"
+ action_title_:0 "Active  in [landed_title.GetNameNoTooltip]"
+ action_title__combined_group_label:0 "Active s"
+ action_title__combined_group_name:0 "Active s can be Previewed"
+ action_title__desc:0 "There is an ongoing  in [landed_title.GetNameNoTooltip], a [title|E] ruled by [landed_title.GetHolder.GetShortUIName]. Currently, the leading candidate is [landed_title.GetHeir.GetUIName].\n\n#help If you are an [elector|E] it is worthwhile to keep tabs on active s, even if you have already feed. Remember, you can change your vote at any time!\n\nEven if you are not an [elector|E] it's good to keep tabs on s. After all, anything can happen... it might be #emp you#! who are the top candidate!#!"
+ action_title__combined_group_description:0 "There are ongoing s in your realm.\n\n#help If you are an [elector|E] it is worthwhile to keep tabs on active s, even if you have already feed. Remember, you can change your vote at any time!\n\nEven if you are not an [elector|E] it's good to keep tabs on s. After all, anything can happen... it might be #emp you#! who are the top candidate!#!"
+ action_title__label:0 "Active  in [landed_title.GetNameNoTooltip]"
+ action_title__combined_label:0 "[landed_title.GetNameNoTooltip|U]"
+ action_title__click:0 "#I Click to view #!"
