--- a/MuchosLocalization/localization/english/event_localization/councillor_task_events/marshal_task_events_l_english.yml
+++ b/MuchosLocalization/localization/english/event_localization/councillor_task_events/marshal_task_events_l_english.yml
@@ -27,7 +27,7 @@
  marshal_task.1003.notification:0 "Guards Drafted for Levy"
 
  marshal_task.1101.t:0 "Well-organized Service"
- marshal_task.1101.desc:0 "With careful vetting and selection of levy soldiers, my [councillor.GetCouncilTitle], [councillor.GetTitledFirstName], has ensured that not a single farm in the [county.GetName] goes untended.\n\nThe records [councillor.GetSheHe] has kept will come in very handy come tax season as well..."
+ marshal_task.1101.desc:0 "With careful vetting and s of levy soldiers, my [councillor.GetCouncilTitle], [councillor.GetTitledFirstName], has ensured that not a single farm in the [county.GetName] goes untended.\n\nThe records [councillor.GetSheHe] has kept will come in very handy come tax season as well..."
  marshal_task.1101.a:0 "Great work, [councillor.GetFirstNameNoTooltip]."
  marshal_task.1101.notification:0 "Well-organized Levy Service"
 
