--- a/MuchosLocalization/localization/english/gui/title_view_l_english.yml
+++ b/MuchosLocalization/localization/english/gui/title_view_l_english.yml
@@ -27,7 +27,7 @@
  TITLE_VIEW_NO_CLAIMANTS:0 "Cannot have claimants"
  TITLE_VIEW_NO_CLAIMANTS_TOOLTIP:0 "#T $TITLE_VIEW_NO_CLAIMANTS$\n#!Some [titles|E] cannot have [claimants|E]: \n$BULLET_WITH_TAB$All [baronies|E]\n$BULLET_WITH_TAB$[mercenary_company|E] Titles\n$BULLET_WITH_TAB$[holy_order|E] Titles\n$BULLET_WITH_TAB$[head_of_faith|E] Titles"
  TITLE_VIEW_TITLE_HISTORY_LABEL:2 "History of the [Title.GetBaseName]"
- TITLE_VIEW_SHOW_ELECTION_TT:1 "#T Show Election Window#!"
+ TITLE_VIEW_SHOW__TT:1 "#T Show  Window#!"
  TITLE_VIEW_CLEAR_LAWS:0 "Remove Law"
  TITLE_VIEW_CLEAR_LAWS_TOOTLIP_TITLE:0 "#T Clear [title_succession|E] Law#!"
  TITLE_VIEW_CLEAR_CLICK:0 "#I Click to clear the [title_succession|E] Law#!"
@@ -94,11 +94,11 @@
  TITLE_CLAIMANTS_HEADER:0 "Claimants"
  TITLE_CLAIMANTS_TOOLTIP:0 "#T View [claimants|E]#!\n#V [TitleViewWindow.GetNumberOfClaimants]#! [Select_CString( EqualTo_int32( TitleViewWindow.GetNumberOfClaimants, '(int32)1' ), 'Claimant','Claimants' )]"
  TITLE_SORT_BY:1 "Sort Order:"
- SORT_BY_DIPLOMACY:0 "Sort by [diplomacy|E] Skill: [Select_CString( And( CharacterSelectionList.IsSortingBySkill( '(int32)0' ), Not( CharacterSelectionList.GetSortOrder ) ), 'Ascending', 'Descending' )|V]"
- SORT_BY_MARTIAL:0 "Sort by [martial|E] Skill: [Select_CString( And( CharacterSelectionList.IsSortingBySkill( '(int32)1' ), Not( CharacterSelectionList.GetSortOrder ) ), 'Ascending', 'Descending' )|V]"
- SORT_BY_STEWARDSHIP:0 "Sort by [stewardship|E] Skill: [Select_CString( And( CharacterSelectionList.IsSortingBySkill( '(int32)2' ), Not( CharacterSelectionList.GetSortOrder ) ), 'Ascending', 'Descending' )|V]"
- SORT_BY_INTRIGUE:0 "Sort by [intrigue|E] Skill: [Select_CString( And( CharacterSelectionList.IsSortingBySkill( '(int32)3' ), Not( CharacterSelectionList.GetSortOrder ) ), 'Ascending', 'Descending' )|V]"
- SORT_BY_LEARNING:0 "Sort by [learning|E] Skill: [Select_CString( And( CharacterSelectionList.IsSortingBySkill( '(int32)4' ), Not( CharacterSelectionList.GetSortOrder ) ), 'Ascending', 'Descending' )|V]"
+ SORT_BY_DIPLOMACY:0 "Sort by [diplomacy|E] Skill: [Select_CString( And( CharacterSList.IsSortingBySkill( '(int32)0' ), Not( CharacterSList.GetSortOrder ) ), 'Ascending', 'Descending' )|V]"
+ SORT_BY_MARTIAL:0 "Sort by [martial|E] Skill: [Select_CString( And( CharacterSList.IsSortingBySkill( '(int32)1' ), Not( CharacterSList.GetSortOrder ) ), 'Ascending', 'Descending' )|V]"
+ SORT_BY_STEWARDSHIP:0 "Sort by [stewardship|E] Skill: [Select_CString( And( CharacterSList.IsSortingBySkill( '(int32)2' ), Not( CharacterSList.GetSortOrder ) ), 'Ascending', 'Descending' )|V]"
+ SORT_BY_INTRIGUE:0 "Sort by [intrigue|E] Skill: [Select_CString( And( CharacterSList.IsSortingBySkill( '(int32)3' ), Not( CharacterSList.GetSortOrder ) ), 'Ascending', 'Descending' )|V]"
+ SORT_BY_LEARNING:0 "Sort by [learning|E] Skill: [Select_CString( And( CharacterSList.IsSortingBySkill( '(int32)4' ), Not( CharacterSList.GetSortOrder ) ), 'Ascending', 'Descending' )|V]"
  CLAIMANT_NOT_A_THREAT:0 "#T Cannot press [claim|e]#!\n[GuiClaimant.IsAllyDesc]"
  CAN_ATTACK_IS_SUBJECT_OF:0 "[CHARACTER.GetShortUIName|U] is a [vassal|E] of [TARGET_CHARACTER.GetShortUIName]"
  CAN_ATTACK_NOT_LANDED:0 "[CHARACTER.GetShortUIName|U] is not landed"
@@ -122,7 +122,7 @@
  TITLE_VIEW_SUCCESSION:0 "Line of Succession"
  TITLE_VIEW_SUCCESSION_DESCRIPTION_CHARACTER:0 "Realm succession: Will be inherited according to [CHARACTER.GetShortUINamePossessive] $LAWS$ law"
  TITLE_VIEW_SUCCESSION_DESCRIPTION_TITLE:0 "[title_succession|E]: Will be inherited according to [TITLE.GetNamePossessive] $LAWS$ law"
- TITLE_VIEW_ELECTION:0 "$game_concept_nominate_heir$"
+ TITLE_VIEW_:0 "$game_concept_nominate_heir$"
  TITLE_VIEW_DE_JURE:0 "De Jure"
  TITLE_VIEW_VASSALS:0 "Title Allegiance"
  TITLE_VIEW_BUILDING_TYPE:0 "Building type: [Holding.GetType.GetName]"
@@ -144,7 +144,7 @@
  TITLE_VIEW_DE_JURE_CAPITAL:0 "[de_jure_capital|E]:"
  TITLE_VIEW_DE_JURE_PART_OF:1 "[de_jure|E] Part of:"
  TITLE_VIEW_TITLE_ADD_LAW_LABEL:0 "Add [succession_law|E]"
- TITLE_VIEW_TITLE_ADD_LAW_INFO:2 "Add a [title_specific_succession|E] [succession_law|E] to [Title.GetName].\n\nThis $game_concept_law$ will only apply to this specific [title|E] and not affect any other $game_concept_titles$ in your [realm|E].\n\n[rulers|E] of at least [king|E]-[title_tier|E] may take the $adopt_special_succession_decision$ [decision|E] instead, if they have access to a cultural elective $game_concept_succession$."
+ TITLE_VIEW_TITLE_ADD_LAW_INFO:2 "Add a [title_specific_succession|E] [succession_law|E] to [Title.GetName].\n\nThis $game_concept_law$ will only apply to this specific [title|E] and not affect any other $game_concept_titles$ in your [realm|E].\n\n[rulers|E] of at least [king|E]-[title_tier|E] may take the $adopt_special_succession_decision$ [decision|E] instead, if they have access to a cultural eating contest $game_concept_succession$."
  TITLE_VIEW_SHOW_ADD_LAWS:0 "Add Laws"
  TITLE_VIEW_TITLE_ADD_LAW_CONFIRM:0 "Add Law"
  TITLE_VIEW_TITLE_ADD_LAW_POSSIBLE_LAWS:0 "Possible Succession Laws"
@@ -153,7 +153,7 @@
  TITLE_VIEW_MERCENARY_NUMBER_OF_KNIGHTS:0 "[knight_i] [MercenaryCompany.GetNumberOfKnights] [HolyOrder.GetTitle.GetHolder.Custom('KnightCulturePlural')]"
  TITLE_VIEW_HO_NUMBER_OF_SOLDIERS:0 "[HolyOrder.GetCurrentSoldiers] [soldiers|E]"
  TITLE_VIEW_MERCENARY_NUMBER_OF_SOLDIERS:0 "[MercenaryCompany.GetCurrentSoldiers] [soldiers|E]"
- CHARACTER_SORT_BY:0 "#T Sort Order: [Select_CString( CharacterSelectionList.GetSortOrder, 'Ascending', 'Descending' )]\n#!#I Click to toggle#!"
+ CHARACTER_SORT_BY:0 "#T Sort Order: [Select_CString( CharacterSList.GetSortOrder, 'Ascending', 'Descending' )]\n#!#I Click to toggle#!"
  FIND_VASSAL_HEADER:2 "Grant to..."
  FIND_VASSAL_RELEVANCE:0 "Relevance"
  FIND_VASSAL_BUTTON_TOOLTIP:2 "#T $FIND_VASSAL_HEADER$#!\nChoose someone to grant this [title|E] to.\n\n$FIND_VASSAL_BUTTON_TOOLTIP_SEGMENT$"
