--- a/MuchosLocalization/localization/english/interactions_l_english.yml
+++ b/MuchosLocalization/localization/english/interactions_l_english.yml
@@ -97,10 +97,10 @@
  offer_vassalization_interaction_desc:0 "Ask [recipient.GetShortUINameNoTooltip] to become your [vassal|E]"
  offer_fealty_interaction:0 "Swear Fealty"
  offer_fealty_interaction_desc:0 "Ask [recipient.GetShortUINameNoTooltip] to become your [liege|E]"
- force_vote_in_succession_election_interaction:0 "Force Vote"
- force_vote_in_succession_election_interaction_desc:0 "By using a [hook|E], I can force someone to vote for the same candidate as me for the next [GetDefine('NCharacter', 'FORCED_SUCCESSION_ELECTION_YEARS')] years"
- force_vote_in_succession_election_interaction_extra_icon:0 "$hook_extra_icon$"
- tooltip_force_vote_in_succession_election_interaction_effect:0 "I force [recipient.GetTitledFirstName] to vote the same as me for the next [GetDefine('NCharacter', 'FORCED_SUCCESSION_ELECTION_YEARS')] years"
+ force_vote_in_succession__interaction:0 "Force Feed"
+ force_vote_in_succession__interaction_desc:0 "By using a [hook|E], I can force someone to feed for the same candidate as me for the next [GetDefine('NCharacter', 'FORCED_SUCCESSION__YEARS')] years"
+ force_vote_in_succession__interaction_extra_icon:0 "$hook_extra_icon$"
+ tooltip_force_vote_in_succession__interaction_effect:0 "I force [recipient.GetTitledFirstName] to feed the same as me for the next [GetDefine('NCharacter', 'FORCED_SUCCESSION__YEARS')] years"
  divorce_character_interaction:0 "Divorce"
  divorce_character_interaction_desc:0 "The time has come for [recipient.GetTitledFirstNameNoTooltip] and I to part ways"
  divorce_character_house_head_interaction:0 "Request Divorce"
@@ -625,7 +625,7 @@
  MUST_BE_OF_SAME_HOUSE_OR_WITHOUT_DYNASTY:0 "[CHARACTER.GetShortUIName|U] is a member of a different House"
  OFFER_VASSALIZATION_INTERACTION_NOTIFICATION:1 "I wish to extend my protection to you as your new liege Lord. All I ask in return is your oath of fealty..."
  GRANT_INDEPENDENCE_INTERACTION_NOTIFICATION:0 "I have decided to grant you your independence. As of today, you are freed from your oath of fealty."
- FORCE_VOTE_INTERACTION_NOTIFICATION:0 "I have decided to leverage my influence over you to force you to vote for my chosen successor in the next election."
+ FORCE_VOTE_INTERACTION_NOTIFICATION:0 "I have decided to leverage my influence over you to force you to feed for my chosen successor in the next ."
  FORCE_JOIN_FACTION_NOTIFICATION:0 "I have decided to leverage my influence over you to force you to join my Faction."
  OFFER_FEALTY_INTERACTION_NOTIFICATION:1 "I humbly ask that you accept my oath of fealty as my new liege Lord."
  REQUEST_ARREST_NOTIFICATION_TEXT:0 "You are hereby under arrest for crimes against the Crown."
@@ -918,7 +918,7 @@
  I_CANNOT_BLACKMAIL_OVER_MY_OWN_LOVER_SECRET:0 "I cannot blackmail over my own Lover [secret|E]"
  I_CANNOT_BLACKMAIL_OVER_MY_OWN_BASTARD:0 "I cannot blackmail over my own [bastard|E]"
 
- FORCE_VOTE_IN_SUCCESSION_ELECTION_ALREADY_FORCED:0 "@warning_icon!#X [CHARACTER.GetUINameNotMe] is already controlling [TARGET_CHARACTER.GetShortUINamePossessive] vote in this election#!"
+ FORCE_VOTE_IN_SUCCESSION__ALREADY_FORCED:0 "@warning_icon!#X [CHARACTER.GetUINameNotMe] is already controlling [TARGET_CHARACTER.GetShortUINamePossessive] food in this #!"
 
  THEIR_FOLLOWERS_ARE_PROTECTING_THEM:0 "[TARGET_CHARACTER.GetHerHis|U] followers are protecting [TARGET_CHARACTER.GetHerHim]!"
 
@@ -1000,7 +1000,7 @@
  # Taking vows
  was_asked_to_take_vows_recently:0 "I have already asked [TARGET_CHARACTER.GetShortUINameNoTooltip] to Take the Vows recently"
 
- CHARACTER_INTERACTION_WINDOW_SELECT_TITLE_TOOLTIP:0 "Title selection"
+ CHARACTER_INTERACTION_WINDOW_SELECT_TITLE_TOOLTIP:0 "Title s"
 
  perk_alliance_interaction:0 "Propose Alliance"
  perk_alliance_interaction_desc:0 "Use strategic diplomacy to forge an alliance with [recipient.GetTitledFirstNameNoTooltip] — not with blood, but with words!"
